feat: adding command system